chore: h2 버전 명시

--- a/build.gradle
+++ b/build.gradle
@@ -5,8 +5,8 @@ repositories {
 
 }
 dependencies {
-
-    implementation 'com.h2database:h2'
+// https://mvnrepository.com/artifact/com.h2database/h2
+    implementation group: 'com.h2database', name: 'h2', version: '1.4.187'
     implementation group: 'org.hibernate', name: 'hibernate-entitymanager', version: '4.3.10.Final'
     // https://mvnrepository.com/artifact/org.projectlombok/lombok
     compileOnly group: 'org.projectlombok', name: 'lombok', version: '1.18.24'
